; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_filter.c_mp_filter_internal_mark_progress.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_filter.c_mp_filter_internal_mark_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_filter = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.filter_runner* }
%struct.filter_runner = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_filter_internal_mark_progress(%struct.mp_filter* %0) #0 {
  %2 = alloca %struct.mp_filter*, align 8
  %3 = alloca %struct.filter_runner*, align 8
  store %struct.mp_filter* %0, %struct.mp_filter** %2, align 8
  %4 = load %struct.mp_filter*, %struct.mp_filter** %2, align 8
  %5 = getelementptr inbounds %struct.mp_filter, %struct.mp_filter* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.filter_runner*, %struct.filter_runner** %7, align 8
  store %struct.filter_runner* %8, %struct.filter_runner** %3, align 8
  %9 = load %struct.filter_runner*, %struct.filter_runner** %3, align 8
  %10 = getelementptr inbounds %struct.filter_runner, %struct.filter_runner* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.mp_filter*, %struct.mp_filter** %2, align 8
  %14 = call i32 @add_pending(%struct.mp_filter* %13)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @add_pending(%struct.mp_filter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
